--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -19,7 +19,7 @@ Bug fixes
 * corrected docstring for irradiance.total_irrad (:issue: '423')
 * removed RuntimeWarnings due to divide by 0 or nans in input data within
   irradiance.perez, clearsky.simplified_solis, pvsystem.adrinverter,
-  pvsystem.ashraeiam, pvsystem.physicaliam.
+  pvsystem.ashraeiam, pvsystem.physicaliam, pvsystem.sapm_aoi_loss.
   (:issue:`428`)
 
 Documentation
