--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -15,7 +15,9 @@ API Changes
   instead. irradiance.extraradiation will be removed in 0.6. (:issue:`422`)
 * Deprecated irradiance.grounddiffuse. Use irradiance.get_ground_diffuse
   instead. irradiance.grounddiffuse will be removed in 0.6. (:issue:`422`)
-
+* Added irradiance.get_poa_sky_diffuse. (:issue:`422`)
+* Deprecated irradiance.total_irrad. Use irradiance.get_total_poa_irradiance
+  instead. irradiance.total_irrad will be removed in 0.6. (:issue:`422`)
 * Removed 'klutcher' from get_sky_diffuse/total_irrad. This misspelling was
   deprecated long ago but never removed.
 
