lookup_linke_turbidity speed improvement (Issue #437)
* replace LinkeTurbidity matlab file by hdf5 (gzip 4)
* update for using LinkeTurbidity hdf5 instead of matlab file in
lookup_linke_turbidity function
* tests dependencies updates
* update requirements / ci for LinkeTurbidity hdf5 file

--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -9,7 +9,7 @@ API Changes
 
 Enhancements
 ~~~~~~~~~~~~
-*
+* Improve clearsky.lookup_linke_turbidity speed (IO) (:issue:`437`)
 
 Bug fixes
 ~~~~~~~~~
@@ -42,5 +42,4 @@ Contributors
 * Will Holmgren
 * KonstantinTr
 * Anton Driesse
-
-
+* Cedric Leroy
