--- a/docs/sphinx/source/whatsnew/v0.5.2.rst
+++ b/docs/sphinx/source/whatsnew/v0.5.2.rst
@@ -1,7 +1,7 @@
 .. _whatsnew_0520:
 
-v0.5.2 (__, 2017)
--------------------------
+v0.5.2 (May 13, 2018)
+---------------------
 
 API Changes
 ~~~~~~~~~~~
@@ -14,9 +14,9 @@ Enhancements
 ~~~~~~~~~~~~
 * Improve clearsky.lookup_linke_turbidity speed, changing .mat source file
   to .h5 (:issue:`437`)
-* Updated libraries for CEC module parameters to SAM release 2017.9.5 
-  (library dated 2017.6.30) and CEC inverter parameters to file posted to 
-  www.github.com/NREL/SAM on 2018.3.18, with one entry removed due to a 
+* Updated libraries for CEC module parameters to SAM release 2017.9.5
+  (library dated 2017.6.30) and CEC inverter parameters to file posted to
+  www.github.com/NREL/SAM on 2018.3.18, with one entry removed due to a
   missing parameter value. (:issue:'440')
 
 Bug fixes
