Update whatsnew for 0.6.0

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -10,7 +10,7 @@ API Changes
 
 Enhancements
 ~~~~~~~~~~~~
-
+* Add sea surface albedo in irradiance.py (:issue:`458`)
 
 Bug fixes
 ~~~~~~~~~
@@ -28,3 +28,4 @@ Testing
 Contributors
 ~~~~~~~~~~~~
 * Will Holmgren
+* Yu Cao
