Expose first_solar_spectral_correction in PVSystem and ModelChain (#466)
* Add first_solar_spectral_correction method, improve infer_spectral_model

* edits: input testing, first_solar_spectral_coefficients name

* rename first_solar_spectral_correction method to first_solar_spectral_loss

* add test for pvsystem.first_solar_spectral_loss

* Fix declarations of weather and airmass in test_spectral_models

* Correct errors and expected value in test_spectral_models

* Fix space error

* Fix handling of weather in test_spectral_models

* Change test_PVSystem_first_solar_spectral_loss and test_spectral_models

* Fix error in first_solar_spectral_loss

* Formatting and flake8

* Add constant_spectral_loss back to test_spectral_models arguments

* Fix line continuation in pvsystem.py

* whatsnew, docstring for pvsystem.first_solar_spectral_loss, remove not implemented in modelchain.py docstring

* Fix typo in pvsystem.py

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -11,6 +11,8 @@ API Changes
 Enhancements
 ~~~~~~~~~~~~
 * Add sea surface albedo in irradiance.py (:issue:`458`)
+* Implement first_solar_spectral_loss in modelchain.py (:issue:'359')
+
 
 Bug fixes
 ~~~~~~~~~
@@ -31,3 +33,5 @@ Contributors
 ~~~~~~~~~~~~
 * Will Holmgren
 * Yu Cao
+* Cliff Hansen
+
