--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -5,13 +5,14 @@ v0.6.0 (___, 2018)
 
 API Changes
 ~~~~~~~~~~~
-
+* pvsystem.calcparams_desoto now requires arguments for each module model parameter.
 
 
 Enhancements
 ~~~~~~~~~~~~
 * Add sea surface albedo in irradiance.py (:issue:`458`)
-* Implement first_solar_spectral_loss in modelchain.py (:issue:'359')
+* Implement first_solar_spectral_loss in modelchain.py (:issue:`359`)
+* Clarify arguments Egref and dEgdT for calcparams_desoto (:issue:`462`)
 
 
 Bug fixes
