Add README documentation and whatsnew

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -13,7 +13,8 @@ Enhancements
 * Add sea surface albedo in irradiance.py (:issue:`458`)
 * Implement first_solar_spectral_loss in modelchain.py (:issue:`359`)
 * Clarify arguments Egref and dEgdT for calcparams_desoto (:issue:`462`)
-
+* Add gold I-V data set for the single-diode model, along with ``i_from_v()``
+and ``v_from_i()`` performance benchmarking
 
 Bug fixes
 ~~~~~~~~~
@@ -35,4 +36,4 @@ Contributors
 * Will Holmgren
 * Yu Cao
 * Cliff Hansen
-
+* Mark Campanelli
