update modelchain docs

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -26,6 +26,8 @@ Documentation
 ~~~~~~~~~~~~~
 * Expand testing section with guidelines for functions, PVSystem/Location
   objects, and ModelChain.
+* Remove several erroneous "not yet implemented" comments from ModelChain
+  documentation. (:issue:``)
 
 
 Testing
