Prototype new PVSystem architecture

--- a/docs/tutorials/pvsystem.ipynb
+++ b/docs/tutorials/pvsystem.ipynb
@@ -243,7 +243,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc0fd9a77b8>"
+       "<matplotlib.legend.Legend at 0x7f4181f3a0f0>"
       ]
      },
      "execution_count": 8,
@@ -360,7 +360,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0fd653f98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f4181c643c8>"
       ]
      },
      "execution_count": 10,
@@ -4259,7 +4259,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc12f592cf8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f416c3d32b0>"
       ]
      },
      "execution_count": 22,
@@ -4492,7 +4492,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fc0e360e978>"
+       "<matplotlib.legend.Legend at 0x7f4167c69208>"
       ]
      },
      "execution_count": 29,
@@ -4717,16 +4717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0e3aa01d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f416c137438>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4760,19 +4760,19 @@
     "# Use CEC here for example, model calibrations are available via pv-fit.com\n",
     "kwargs = {'Rs': cecmodule['R_s'],\n",
     "          'Gsh': 1. / cecmodule['R_sh_ref'],\n",
-    "          'nNsVth': pvsystem.nNsVth_campanelli,\n",
+    "          'nNsVth': pvsystem.get_nNsVth_campanelli,\n",
     "          'nNsVth_ref': cecmodule['a_ref'],\n",
-    "          'I0': pvsystem.I0_campanelli,\n",
+    "          'I0': pvsystem.get_I0_campanelli,\n",
     "          'I0_ref': cecmodule['I_o_ref'],\n",
     "          'Eg_ref_star': cecmodule['N_s'] * 1.121,\n",
     "          'dEgdT_ref_star': T_ref_K * -0.0002677,\n",
-    "          'IL': pvsystem.IL_campanelli,\n",
+    "          'IL': pvsystem.get_IL_campanelli,\n",
     "          'Isc_ref': cecmodule['I_sc_ref']}\n",
     "\n",
     "photocurrent, saturation_current, resistance_series, resistance_shunt, nNsVth = \\\n",
-    "    pvsystem.calc_params_campanelli(F, H, **kwargs)\n",
+    "    pvsystem.calcparams_campanelli(F, H, **kwargs)\n",
     "\n",
-    "power = effective_irradiance.copy()  # Gets the timestamps\n",
+    "power = 0.*effective_irradiance.copy()  # Gets the timestamps\n",
     "power[:] = pvsystem.singlediode(photocurrent, saturation_current, resistance_series,\n",
     "                                resistance_shunt, nNsVth)['p_mp']\n",
     "power.plot()"
@@ -4782,12 +4782,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Changing the auxiliary equation for Gsh"
+    "#### Swapping in a custom auxiliary equation for Gsh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -4801,10 +4801,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc0e3ab0668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f416c26c550>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -4821,20 +4821,29 @@
    ],
    "source": [
     "# Here we use a photoconductive shunt analogous to the DeSoto and CEC models\n",
+    "\n",
+    "def get_Gsh_photoconductive(F, H, **kwargs):\n",
+    "    \"\"\"\n",
+    "    Returns a photoconductive shunt conductance, analogous to DeSoto et al.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    return kwargs['Gsh_ref'] * F\n",
+    "\n",
+    "\n",
     "kwargs_alt = {'Rs': cecmodule['R_s'],\n",
-    "              'Gsh': pvsystem.Gsh_photoconductive,\n",
+    "              'Gsh': get_Gsh_photoconductive,\n",
     "              'Gsh_ref': 1. / cecmodule['R_sh_ref'],\n",
-    "              'nNsVth': pvsystem.nNsVth_campanelli,\n",
+    "              'nNsVth': pvsystem.get_nNsVth_campanelli,\n",
     "              'nNsVth_ref': cecmodule['a_ref'],\n",
-    "              'I0': pvsystem.I0_campanelli,\n",
+    "              'I0': pvsystem.get_I0_campanelli,\n",
     "              'I0_ref': cecmodule['I_o_ref'],\n",
     "              'Eg_ref_star': cecmodule['N_s'] * 1.121,\n",
     "              'dEgdT_ref_star': T_ref_K * -0.0002677,\n",
-    "              'IL': pvsystem.IL_campanelli,\n",
+    "              'IL': pvsystem.get_IL_campanelli,\n",
     "              'Isc_ref': cecmodule['I_sc_ref']}\n",
     "\n",
     "photocurrent_alt, saturation_current_alt, resistance_series_alt, resistance_shunt_alt, \\\n",
-    "    nNsVth_alt = pvsystem.calc_params_campanelli(F, H, **kwargs_alt)\n",
+    "    nNsVth_alt = pvsystem.calcparams_campanelli(F, H, **kwargs_alt)\n",
     "\n",
     "power_alt = effective_irradiance.copy()  # Gets the timestamps\n",
     "power_alt[:] = pvsystem.singlediode(photocurrent_alt, saturation_current_alt,\n",
@@ -4852,7 +4861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4862,21 +4871,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'plot'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-d1931623cfc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msingle_diode_out\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'i_sc'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'plot'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "single_diode_out['i_sc'].plot()"
    ]
