--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -29,6 +29,8 @@ Documentation
 ~~~~~~~~~~~~~
 * Expand testing section with guidelines for functions, PVSystem/Location
   objects, and ModelChain.
+* Updated several incorrect statements in ModelChain documentation regarding
+  implementation status and default values. (:issue:`480`)
 
 
 Testing
