--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -25,8 +25,8 @@ Enhancements
   if the method is either ``'fast'`` or ``'gold'``, but the IV curve points will
   be log spaced instead of linear.
 * Implement :func:`~pvlib.pvsystem.estimate_voc` to estimate open circuit
-  voltage by assuming :math:`R_{sh} \to \infty`. This is used as an upper bound
-  in bisection method for :func:`~pvlib.pvsystem.singlediode`.
+  voltage by assuming :math:`R_{sh} \to \infty` and :math:`R_s=0` as an upper
+  bound in bisection method for :func:`~pvlib.pvsystem.singlediode`.
 * Combine existing :func:`~pvlib.pvsystem.singlediode` method using Lambert-W
   with the two new implementations to form a wrapper, that takes an additional
   ``method`` argument ``('lambertw', 'fast', 'gold')`` that defaults to the new
