API: DOC: ENH: change pvsystem.mpp() -> max_power_point()
* update api.rst and what's new, and test_pvsystem.py everywhere where
it says mpp()
* remove logging, LOGGER, timeing, and CLI for test_singlediode_methods
* remove p from out in pvsystem.singlediode if ivcurve_npts is provided
since not part of original api
* so remove p from test_singlediode_methods.py too
* add singlediode_methods to pvlib/__init__.py
* just assign out once for all methods, outside of the if/else blocks in
pvsystem.singlediode
* since IDE complains, and future maintainer may not realize, initialize
ivcurve_* with NotImplemented instead of None or nothing at all so this
is explicit, you must calculate this or else
* need to create values for i_sc, i_x, and i_xx in bishop88 methods to
fill out

--- a/docs/sphinx/source/whatsnew/v0.6.0.rst
+++ b/docs/sphinx/source/whatsnew/v0.6.0.rst
@@ -37,8 +37,8 @@ Enhancements
   circuit voltage by assuming :math:`R_{sh} \to \infty` and :math:`R_s=0` as an
   upper bound in bisection method for :func:`~pvlib.pvsystem.singlediode` when
   method is either ``'newton'`` or ``'brentq'``.
-* Add :func:`~pvlib.pvsystem.mpp` method to compute the max power point using
-  the new ``'brentq'`` method.
+* Add :func:`~pvlib.pvsystem.max_power_point` method to compute the max power
+  point using the new ``'brentq'`` method.
 * Add new module ``pvlib.singlediode_methods`` with low-level functions for
   solving the single diode equation such as:
   :func:`~pvlib.singlediode_methods.bishop88`,
